crates/solite-fmt/src/snapshots/solite_fmt__tests__comparison_operators.snap
---
source: crates/solite_fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- select * from t where a = 1 and b <> 2 and c < 3 and d <= 4 and e > 5 and f >= 6

-- Output:
select *
from t
where a = 1
  and b <> 2
  and c < 3
  and d <= 4
  and e > 5
  and f >= 6;
