crates/solite-fmt/src/snapshots/solite_fmt__tests__config_indent_8_spaces.snap
---
source: crates/solite_fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- select a, b, c from t

-- Output:
select
        a,
        b,
        c
from t;
