crates/solite-fmt/src/snapshots/solite_fmt__tests__config_leading_comma_insert.snap
---
source: crates/solite_fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- insert into t (a, b, c) values (1, 2, 3), (4, 5, 6)

-- Output:
insert into t(a, b, c)
values
  (1, 2, 3)
  , (4, 5, 6);
