crates/solite-fmt/src/snapshots/solite_fmt__tests__config_leading_comma_select.snap
---
source: crates/solite_fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- select a, b, c, d from t

-- Output:
select
  a
  , b
  , c
  , d
from t;
