crates/solite-fmt/src/snapshots/solite_fmt__tests__config_lowercase_create_table.snap
---
source: crates/solite_fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- CREATE TABLE t (id INTEGER PRIMARY KEY, name TEXT NOT NULL)

-- Output:
create table t(
  id INTEGER primary key,
  name TEXT not null
);
